--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARC E-Bay Circuit Planner</title>
+    <title>CircuitSpace</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h1>ARC E-Bay Circuit Planner</h1>
+        <h1>CircuitSpace</h1>
         <div class="header-buttons">
             <button id="export-svg-btn">Export as SVG</button>
             <button id="generate-bom-btn">Generate List of Components</button>
