--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CircuitSpace</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -12,7 +13,10 @@
 <body>
 
     <header>
-        <h1>CircuitSpace</h1>
+        <div class="header-title">
+            <img src="assets/favicon.png" alt="CircuitSpace icon" class="header-icon">
+            <h1>CircuitSpace</h1>
+        </div>
         <div class="header-buttons">
             <button id="export-svg-btn">Export as SVG</button>
             <button id="generate-bom-btn">Generate List of Components</button>
