--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </tr>
                 </thead>
                 <tbody>
-\                </tbody>
+                </tbody>
             </table>
         </div>
     </div>
