feat: zoom display

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 
         <div id="canvas-container">
             <svg id="drawing-canvas"></svg>
+            <div id="zoom-controls">
+                <button id="zoom-in-btn">+</button>
+                <div id="zoom-percentage">100%</div>
+                <button id="zoom-out-btn">-</button>
+            </div>
         </div>
 
         <div id="side-panel">
